--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -7,8 +11,9 @@ body {
 }
 
 body {
-  font-size: 25px;
-  background-color: lightblue;
+  height: 400px;
+  width: 400px;
+  background-color: purple;
 }
 
 a {
